--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,8 @@
+version: '3.1'
 services:
-  odoo:
-    image: odoo:latest
-    ports:
-      - "8069:8069"
-    depends_on:
-      - db
-    volumes:
-      - ./app:/usr/src/app
   db:
-    image: postgres:latest
+    image: postgres:13
+    container_name: dam22_postgresql
     environment:
       - POSTGRES_DB=postgres
       - POSTGRES_PASSWORD=odoo
@@ -16,4 +10,13 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./datos:/var/lib/postgresql/data
+      - dam22_postgres:/var/lib/postgresql/data
+  odoo:
+    image: odoo:14.0
+    container_name: dam22_odoo
+    ports:
+      - "8069:8069"
+    depends_on:
+      - db
+volumes:
+  dam22_postgres:
